fix: doc alignments in action buttons for firefox

--- a/izanami-frontend/src/App.css
+++ b/izanami-frontend/src/App.css
@@ -83,3 +83,9 @@ header .nav-link {
   justify-content: center;
   width: 24px;
 }
+
+@-moz-document url-prefix() {
+  [class*=" bi-three-dots-vertical"]::before {
+    vertical-align: -0.25em;
+  }
+}
